@@ -40,6 +40,7 @@ Bugs fixed:
 - 1614075 Fixed enabling slp can lead to a segfault
 - 1529134 Fixed internal provider associator operations
 - 1613172 Fixed XML generation for reference and array PARAMVALUEs
+- 1615776 Fixed XML parsing of PARAMVALUEs
 - 1615731 Fixed slp tracing and shutdown
 
 Changes in 1.1.1
